Add a release document.